[tool.poetry]
name = "cohostpost"
version = "0.1.0"
description = ""
authors = ["Kiva <git@kiva.lgbt>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cohost = "^0.4.0"
fastapi = {extras = ["all"], version = "^0.104.1"}
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
